Bug 515285 - Implement JS_SameValue, and make assertEq use it rather than JS_StrictlyEqual.  r=jorendorff